--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Smart Contracts for the WatchIt Economy",
   "main": "index.js",
   "scripts": {
-    "lint": "standard",
+    "lint": "standard; solhint contracts/**/*.sol",
     "test": "hardhat test"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.3.0",
+    "solhint": "^3.3.4",
     "standard": "^16.0.3"
   },
   "standard": {
