--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "lint": "standard; solhint contracts/**/*.sol",
     "test": "hardhat test"
   },
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
