--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard; solhint contracts/**/*.sol",
-    "test": "hardhat test"
+    "test": "nyc hardhat coverage"
   },
   "engines": {
     "node": ">=12.0.0"
