--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "ethers": "^5.1.4",
     "hardhat": "^2.3.0",
     "solhint": "^3.3.4",
+    "nyc": "^15.1.0",
+    "solidity-coverage": "^0.7.16",
     "standard": "^16.0.3"
   },
   "standard": {
