--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install standard && npm install solhint && npm run lint
-    - run: npm i
+    - run: npm ci
     - run: npm run build --if-present
     - run: npm test
