chore: add gas reporter

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.3.0",
+    "hardhat-gas-reporter": "^1.0.4",
     "husky": "^6.0.0",
     "nyc": "^15.1.0",
     "solhint": "^3.3.4",
