--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.3.0",
+    "hardhat-contract-sizer": "^2.0.3",
     "hardhat-gas-reporter": "^1.0.4",
     "husky": "^6.0.0",
     "nyc": "^15.1.0",
