test: should cannot upgrade if not owner

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test"
+      "pre-commit": "hh compile && npm test"
     }
   },
   "standard": {
