--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "npm lint:js && npm lint:solidity",
     "lint:js": "standard",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
-    "test": "nyc hardhat coverage"
+    "test": "nyc hardhat coverage",
+    "test:ropsten": "npx hardhat test --network ropsten"
   },
   "engines": {
     "node": ">=12.0.0"
