--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,22 +16,14 @@ jobs:
       - run: npm install standard
       - run: npm run lint:js
 
-  solium:
-    name: solium linting
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-      - run: npm install ethlint
-      - run: npm run lint:solidity
-
   solhint:
+    name: solhint linting
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
       - run: npm install solhint
-      - run: npm run hint:solidity
+      - run: npm run lint:solidity
 
   build:
     runs-on: ubuntu-latest
