--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,5 +1,5 @@
 ---
-name: Node.js CI
+name: Static Analysis
 
 on:
   push:
@@ -24,19 +24,3 @@ jobs:
       - uses: actions/setup-node@v2
       - run: npm install solhint
       - run: npm run lint:solidity
-
-  build:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 15.x]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm test
