--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Smart Contracts for the WatchIt Economy",
   "main": "index.js",
   "scripts": {
-    "lint": "npm lint:js && npm lint:solidity",
+    "lint": "npm run lint:js && npm run lint:solidity",
     "lint:js": "standard",
+    "lint:js:fix": "npm run lint:js -- --fix",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
     "test": "nyc hardhat coverage",
     "test:ropsten": "TESTNET=true npx hardhat test --network ropsten"
@@ -37,7 +38,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "hh compile && npm test"
+      "pre-commit": "hh compile && npm run lint:js:fix && npm test"
     }
   },
   "standard": {
