--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "npm run lint:js && npm run lint:solidity",
     "lint:js": "standard",
-    "lint:js:fix": "npm run lint:js -- --fix",
+    "lint:js:fix": "standard --fix",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
     "test": "nyc hardhat coverage",
     "test:ropsten": "TESTNET=true npx hardhat test --network ropsten"
