--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,11 +24,11 @@ jobs:
   testnet:
     runs-on: ubuntu-latest
     needs: hardhat
-    timeout-minutes: 15
-    strategy:
+    timeout-minutes: 20
       fail-fast: false
+    strategy:
       matrix:
-        network: [rinkeby]
+        network: [ropsten, rinkeby]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
