--- a/env.example
+++ b/env.example
@@ -2,3 +2,13 @@
 
 ALCHEMY_API_KEY=
 ROPSTEN_PRIVATE_KEY=
+OWNER_KEY=
+SECONDARY_KEY=
+
+ROPSTEN_ALCHEMY_API_KEY=
+ROPSTEN_CONTRACT_NFT=0x
+ROPSTEN_CONTRACT_FT=0x
+
+RINKEBY_ALCHEMY_API_KEY=
+RINKEBY_CONTRACT_NFT=0x
+RINKEBY_CONTRACT_FT=0x
