fix: removing fail-fast on CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,7 @@ jobs:
     needs: hardhat
     timeout-minutes: 10
     strategy:
+      fail-fast: false
       matrix:
         network: [ropsten, rinkeby]
     steps:
