--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint:js": "standard",
     "lint:js:fix": "standard --fix",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
-    "test": "nyc hardhat coverage",
+    "test": "make test",
+    "test:coverage": "nyc hardhat coverage",
     "test:ropsten": "TESTNET=true npx hardhat test --network ropsten"
   },
   "engines": {
