--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        network: [rinkeby]
+        network: [rinkeby, goerli, ropsten]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
