--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,20 +19,30 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npm test
+      - run: make test
 
-  ropsten:
+  testnet:
     runs-on: ubuntu-latest
     needs: hardhat
+    timeout-minutes: 15
+    strategy:
+      fail-fast: false
+      matrix:
+        network: [rinkeby]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
       - run: npm ci
-      - run: npm run test:ropsten
+      - run: npm run test:${{ matrix.network }}
         env:
-          TESTNET: true
-          ALCHEMY_API_KEY: ${{ secrets.ALCHEMY_API_KEY }}
-          ROPSTEN_OWNER_KEY: ${{ secrets.ROPSTEN_OWNER_KEY }}
-          ROPSTEN_ACCOUNT1_KEY: ${{ secrets.ROPSTEN_ACCOUNT1_KEY }}
-          TESNET_CONTRACT_NFT: ${{ secrets.TESNET_CONTRACT_NFT }}
-          TESNET_CONTRACT_FT: ${{ secrets.TESNET_CONTRACT_FT }}
+          GOERLI_ALCHEMY_API_KEY: ${{ secrets.GOERLI_ALCHEMY_API_KEY }}
+          RINKEBY_ALCHEMY_API_KEY: ${{ secrets.RINKEBY_ALCHEMY_API_KEY }}
+          ROPSTEN_ALCHEMY_API_KEY: ${{ secrets.ROPSTEN_ALCHEMY_API_KEY }}
+          OWNER_KEY: ${{ secrets.OWNER_KEY }}
+          SECONDARY_KEY: ${{ secrets.SECONDARY_KEY }}
+          GOERLI_CONTRACT_NFT: ${{ secrets.GOERLI_CONTRACT_NFT }}
+          GOERLI_CONTRACT_FT: ${{ secrets.GOERLI_CONTRACT_FT }}
+          RINKEBY_CONTRACT_NFT: ${{ secrets.RINKEBY_CONTRACT_NFT }}
+          RINKEBY_CONTRACT_FT: ${{ secrets.RINKEBY_CONTRACT_FT }}
+          ROPSTEN_CONTRACT_NFT: ${{ secrets.ROPSTEN_CONTRACT_NFT }}
+          ROPSTEN_CONTRACT_FT: ${{ secrets.ROPSTEN_CONTRACT_FT }}
