--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,11 +24,11 @@ jobs:
   testnet:
     runs-on: ubuntu-latest
     needs: hardhat
-    timeout-minutes: 15
+    timeout-minutes: 20
     strategy:
       fail-fast: false
       matrix:
-        network: [rinkeby]
+        network: [rinkeby, goerli, ropsten]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
