--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        network: [rinkeby, goerli, ropsten]
+        network: [rinkeby, goerli, kovan, ropsten]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -36,12 +36,15 @@ jobs:
       - run: npm run test:${{ matrix.network }}
         env:
           GOERLI_ALCHEMY_API_KEY: ${{ secrets.GOERLI_ALCHEMY_API_KEY }}
+          KOVAN_ALCHEMY_API_KEY: ${{ secrets.KOVAN_ALCHEMY_API_KEY }}
           RINKEBY_ALCHEMY_API_KEY: ${{ secrets.RINKEBY_ALCHEMY_API_KEY }}
           ROPSTEN_ALCHEMY_API_KEY: ${{ secrets.ROPSTEN_ALCHEMY_API_KEY }}
           OWNER_KEY: ${{ secrets.OWNER_KEY }}
           SECONDARY_KEY: ${{ secrets.SECONDARY_KEY }}
           GOERLI_CONTRACT_NFT: ${{ secrets.GOERLI_CONTRACT_NFT }}
           GOERLI_CONTRACT_FT: ${{ secrets.GOERLI_CONTRACT_FT }}
+          KOVAN_CONTRACT_NFT: ${{ secrets.KOVAN_CONTRACT_NFT }}
+          KOVAN_CONTRACT_FT: ${{ secrets.KOVAN_CONTRACT_FT }}
           RINKEBY_CONTRACT_NFT: ${{ secrets.RINKEBY_CONTRACT_NFT }}
           RINKEBY_CONTRACT_FT: ${{ secrets.RINKEBY_CONTRACT_FT }}
           ROPSTEN_CONTRACT_NFT: ${{ secrets.ROPSTEN_CONTRACT_NFT }}
