update(docs): updating env.example

--- a/env.example
+++ b/env.example
@@ -1,14 +1,19 @@
-# Copy this to .env with proper values
+GOERLI_ALCHEMY_API_KEY=
+KOVAN_ALCHEMY_API_KEY=
+ROPSTEN_ALCHEMY_API_KEY=
+RINKEBY_ALCHEMY_API_KEY=
 
-ALCHEMY_API_KEY=
-ROPSTEN_PRIVATE_KEY=
 OWNER_KEY=
 SECONDARY_KEY=
 
-ROPSTEN_ALCHEMY_API_KEY=
-ROPSTEN_CONTRACT_NFT=0x
-ROPSTEN_CONTRACT_FT=0x
+GOERLI_CONTRACT_FT=
+GOERLI_CONTRACT_NFT=
 
-RINKEBY_ALCHEMY_API_KEY=
-RINKEBY_CONTRACT_NFT=0x
-RINKEBY_CONTRACT_FT=0x
+KOVAN_CONTRACT_FT=
+KOVAN_CONTRACT_NFT=
+
+RINKEBY_CONTRACT_FT=
+RINKEBY_CONTRACT_NFT=
+
+ROPSTEN_CONTRACT_FT=
+ROPSTEN_CONTRACT_NFT=
