--- a/env.example
+++ b/env.example
@@ -17,3 +17,6 @@ RINKEBY_CONTRACT_NFT=
 
 ROPSTEN_CONTRACT_FT=
 ROPSTEN_CONTRACT_NFT=
+
+# This should only be enabled in CI
+HARDHAT_AUTOMINE=false
