feat(ci): HARDHAT_AUTOMINE env var

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,7 @@ jobs:
         env:
           LOCALHOST_CONTRACT_NFT: ${{ secrets.LOCALHOST_CONTRACT_NFT }}
           LOCALHOST_CONTRACT_FT: ${{ secrets.LOCALHOST_CONTRACT_FT }}
+          HARDHAT_AUTOMINE: "true"
       - name: docker-compose logs on failure
         if: ${{ failure() }}
         run: docker-compose logs
