--- a/package.json
+++ b/package.json
@@ -2,56 +2,130 @@
   "name": "watchit-contracts",
   "version": "0.1.0",
   "description": "Smart Contracts for the WatchIt Economy",
-  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "keywords": [],
+  "main": "webpack.config.babel.js",
   "scripts": {
     "lint": "npm run lint:js && npm run lint:solidity",
     "lint:js": "standard",
     "lint:js:fix": "standard --fix",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
     "test": "make test",
+    "test:ui": "cross-env NODE_ENV=development jest",
     "test:coverage": "nyc hardhat coverage",
     "test:goerli": "npx hardhat test --network goerli",
     "test:kovan": "npx hardhat test --network kovan",
     "test:rinkeby": "npx hardhat test --network rinkeby",
-    "test:ropsten": "npx hardhat test --network ropsten"
+    "test:ropsten": "npx hardhat test --network ropsten",
+    "hook": "hh compile && npm run lint:js:fix && npm run test && npm run test:ui",
+    "watch:ui": "webpack  --watch ",
+    "build:ui": "cross-env NODE_ENV=production webpack",
+    "start:ui": "cross-env WEBPACK_IS_DEV_SERVER=true NODE_ENV=development webpack serve --config webpack.config.babel.js"
   },
-  "engines": {
-    "node": ">=12.0.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/register": "~7.12.1",
+    "@babel/runtime-corejs3": "^7.14.7",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts-upgradeable": "^4.1.0",
     "@openzeppelin/hardhat-upgrades": "^1.8.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@svgr/webpack": "^5.5.0",
+    "@types/enzyme": "^3.10.8",
+    "@types/history": "^4.7.8",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^16.14.8",
+    "@types/react-router-dom": "^5.1.7",
+    "babel-jest": "^26.6.0",
+    "babel-loader": "^8.2.2",
     "bs58": "^4.0.1",
     "chai": "^4.3.4",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "compression-webpack-plugin": "^8.0.0",
+    "copy-webpack-plugin": "^9.0.0",
+    "core-js": "~3.7.0",
+    "cross-env": "^7.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eth-gas-reporter": "^0.2.22",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.1",
+    "fork-ts-checker-webpack-plugin": "^6.2.12",
     "hardhat": "^2.4.0",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-gas-reporter": "^1.0.4",
-    "husky": "^6.0.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "import-sort-style-module-and-prefix": "^0.1.3",
+    "is-windows": "^1.0.2",
+    "jest": "^27.0.5",
+    "jest-circus": "26.6.0",
+    "jest-resolve": "26.6.0",
+    "jest-watch-typeahead": "0.6.1",
     "multihashing-async": "^2.1.2",
     "nyc": "^15.1.0",
+    "path": "^0.12.7",
+    "react-app-polyfill": "^2.0.0",
+    "react-refresh": "^0.10.0",
+    "resolve-url-loader": "^4.0.0",
     "solhint": "^3.3.6",
     "solidity-coverage": "^0.7.16",
-    "standard": "^16.0.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "hh compile && npm run lint:js:fix && npm test"
-    }
-  },
-  "standard": {
-    "env": "mocha"
+    "styled-jsx": "^3.4.4",
+    "svg-url-loader": "^7.1.1",
+    "terser-webpack-plugin": "^5.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/test-helpers": "^0.5.11",
-    "dotenv": "^10.0.0"
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-redux": "^5.0.18",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-saga": "^0.10.5",
+    "@types/styled-components": "^5.1.11",
+    "dotenv": "^10.0.0",
+    "husky": "^6.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
+    "standard": "^16.0.3",
+    "styled-components": "^5.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run hook"
+    }
+  },
+  "standard": {
+    "ignore": [
+      "webpack.config.babel.js",
+      "package.json",
+      ".gitignore",
+      "/webpack/**/*.js",
+      "/test/**/*.js"
+    ]
   }
 }
