--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "main": "webpack.config.babel.js",
   "scripts": {
     "lint": "npm run lint:js && npm run lint:solidity",
-    "lint:js": "standard",
-    "lint:js:fix": "standard --fix",
+    "lint:js": "standard && ts-standard",
+    "lint:js:fix": "standard --fix && ts-standard --fix",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
     "test": "make test",
     "test:ui": "jest --watchAll=false",
@@ -83,6 +83,7 @@
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
@@ -112,7 +113,8 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "standard": "^16.0.3",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "ts-standard": "^10.0.0"
   },
   "husky": {
     "hooks": {
@@ -120,6 +122,16 @@
     }
   },
   "standard": {
+    "ignore": [
+      "webpack.config.babel.js",
+      "package.json",
+      ".gitignore",
+      "/webpack/**/*.js",
+      "/test/**/*.js"
+    ]
+  },
+  "ts-standard": {
+    "project": "tsconfig.json",
     "ignore": [
       "webpack.config.babel.js",
       "package.json",
