--- a/jest.config.json
+++ b/jest.config.json
@@ -6,7 +6,7 @@
     "react-app-polyfill/jsdom"
   ],
   "setupFilesAfterEnv": [
-    "<rootDir>/jest/setupEnzyme.js"
+    "<rootDir>/.jest/setupEnzyme.js"
   ],
   "testMatch": [
     "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
