--- a/package.json
+++ b/package.json
@@ -128,6 +128,9 @@
       ".gitignore",
       "/webpack/**/*.js",
       "/test/**/*.js"
+    ],
+    "env": [
+      "mocha"
     ]
   },
   "ts-standard": {
