--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "copy-webpack-plugin": "^9.0.0",
     "core-js": "~3.7.0",
     "cross-env": "^7.0.3",
+    "envfile": "^6.14.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eth-gas-reporter": "^0.2.22",
