--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
     "redux-thunk": "^2.3.0",
     "standard": "^16.0.3",
     "styled-components": "^5.3.0",
-    "ts-standard": "^10.0.0"
+    "ts-standard": "^10.0.0",
+    "v8-compile-cache": "^2.3.0"
   },
   "husky": {
     "hooks": {
