perf: add v8 compile cache

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "paths": {
       "@src/*": ["src/*"],
       "@app/*": ["src/app/*"],
-      "@media/*": ["src/app/media/*"],
+      "@media/*": ["src/app/assets/*"],
       "@components/*": ["src/app/components/*"]
     },
     "allowSyntheticDefaultImports": true,
