--- a/jest.config.json
+++ b/jest.config.json
@@ -22,6 +22,7 @@
   ],
   "moduleNameMapper": {
     "^@src(.*)$": "<rootDir>/src$1",
+    "^@public(.*)$": "<rootDir>/public/$1",
     "^@images(.*)$": "<rootDir>/src/images$1",
     "^@styles(.*)$": "<rootDir>/src/styles$1",
     "^@components(.*)$": "<rootDir>/src/components$1",
