--- a/jest.config.json
+++ b/jest.config.json
@@ -24,6 +24,7 @@
     "^@src(.*)$": "<rootDir>/src$1",
     "^@redux(.*)$": "<rootDir>/src/redux$1",
     "^@public(.*)$": "<rootDir>/public/$1",
+    "^@pages(.*)$": "<rootDir>/src/pages/$1",
     "^@components(.*)$": "<rootDir>/src/components$1"
   },
   "resetMocks": true,
