--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "outDir": "./dist",
     "target": "es6",
     "module": "es2015",
-    "lib": ["es6", "dom"],
+    "lib": [
+      "es6",
+      "dom"
+    ],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react",
@@ -15,18 +18,37 @@
     "resolveJsonModule": true,
     "baseUrl": "./",
     "rootDir": "./",
-    "typeRoots": ["./node_modules/@types", "./src/@types"],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types"
+    ],
     "paths": {
-      "@public/*": ["public/*"],
-      "@src/*": ["src/*"],
-      "@assets/*": ["src/app/assets/*"],
-      "@components/*": ["src/app/components/*"]
+      "@public/*": [
+        "public/*"
+      ],
+      "@src/*": [
+        "src/*"
+      ],
+      "@redux/*": [
+        "src/redux/*"
+      ],
+      "@assets/*": [
+        "src/app/assets/*"
+      ],
+      "@components/*": [
+        "src/app/components/*"
+      ]
     },
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "importsNotUsedAsValues": "preserve",
     "incremental": true
   },
-  "include": ["src"],
-  "exclude": ["**/node_modules", "**/.*/"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "**/node_modules",
+    "**/.*/"
+  ]
 }
