--- a/package.json
+++ b/package.json
@@ -96,24 +96,24 @@
     "@material-ui/icons": "^4.11.2",
     "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/test-helpers": "^0.5.11",
+    "@reduxjs/toolkit": "^1.6.1",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-redux": "^5.0.18",
     "@types/redux-logger": "^3.0.8",
-    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.11",
+    "connected-react-router": "^6.9.1",
     "dotenv": "^10.0.0",
     "husky": "^7.0.1",
+    "immutable": "^4.0.0-rc.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "standard": "^16.0.3",
     "styled-components": "^5.3.0",
