--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "cross-env": "^7.0.3",
     "envfile": "^6.14.0",
     "enzyme": "^3.11.0",
+    "dotenv": "^10.0.0",
+    "husky": "^7.0.1",
     "enzyme-adapter-react-16": "^1.15.6",
     "eth-gas-reporter": "^0.2.22",
     "ethereum-waffle": "^3.3.0",
@@ -77,12 +79,14 @@
     "react-refresh": "^0.10.0",
     "resolve-url-loader": "^4.0.0",
     "solhint": "^3.3.6",
+    "standard": "^16.0.3",
     "solidity-coverage": "^0.7.16",
     "styled-jsx": "^3.4.4",
     "svg-url-loader": "^7.1.1",
     "terser-webpack-plugin": "^5.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
+    "ts-standard": "^10.0.0",
     "typescript": "^4.3.4",
     "typescript-eslint": "^0.0.1-alpha.0",
     "url-loader": "^4.1.1",
@@ -103,21 +107,17 @@
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.11",
     "connected-react-router": "^6.9.1",
-    "dotenv": "^10.0.0",
-    "husky": "^7.0.1",
     "immutable": "^4.0.0-rc.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
     "react-router-redux": "^4.0.8",
-    "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "standard": "^16.0.3",
-    "styled-components": "^5.3.0",
-    "ts-standard": "^10.0.0"
+    "styled-components": "^5.3.0"
   },
   "husky": {
     "hooks": {
