--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
       "@src/*": [
         "src/*"
       ],
-      "@redux/*": [
+      "@core/*": [
         "src/redux/*"
       ],
       "@assets/*": [
