refactor: rename @core => @state

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
       "@src/*": [
         "src/*"
       ],
-      "@core/*": [
+      "@state/*": [
         "src/redux/*"
       ],
       "@assets/*": [
