--- a/jest.config.json
+++ b/jest.config.json
@@ -22,7 +22,7 @@
   ],
   "moduleNameMapper": {
     "^@src(.*)$": "<rootDir>/src$1",
-    "^@core(.*)$": "<rootDir>/src/redux$1",
+    "^@state(.*)$": "<rootDir>/src/redux$1",
     "^@public(.*)$": "<rootDir>/public/$1",
     "^@pages(.*)$": "<rootDir>/src/pages/$1",
     "^@components(.*)$": "<rootDir>/src/components$1"
