chore: allow injected filtered env vars

--- a/env.example
+++ b/env.example
@@ -2,21 +2,20 @@ GOERLI_ALCHEMY_API_KEY=
 KOVAN_ALCHEMY_API_KEY=
 ROPSTEN_ALCHEMY_API_KEY=
 RINKEBY_ALCHEMY_API_KEY=
-
 OWNER_KEY=
 SECONDARY_KEY=
-
 GOERLI_CONTRACT_FT=
 GOERLI_CONTRACT_NFT=
-
 KOVAN_CONTRACT_FT=
 KOVAN_CONTRACT_NFT=
-
 RINKEBY_CONTRACT_FT=
 RINKEBY_CONTRACT_NFT=
-
 ROPSTEN_CONTRACT_FT=
 ROPSTEN_CONTRACT_NFT=
-
 # This should only be enabled in CI
 HARDHAT_AUTOMINE=false
+
+# UI ENV VARS
+# Define vars using prefix MARKETPLACE_ to
+# inject into app
+MARKETPLACE_WEB3_DEFAULT_LIB=ethers.js
