chore: add providers routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,9 @@
       "@src/*": [
         "src/*"
       ],
+      "@providers/*": [
+        "src/providers/*"
+      ],
       "@state/*": [
         "src/redux/*"
       ],
