--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@types/react-router-redux": "^5.0.18",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.11",
+    "@web3-react/core": "^6.1.9",
     "connected-react-router": "^6.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
