--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
     "copy-webpack-plugin": "^9.0.0",
     "core-js": "~3.7.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.2.0",
+    "dotenv": "^10.0.0",
     "envfile": "^6.14.0",
     "enzyme": "^3.11.0",
-    "dotenv": "^10.0.0",
-    "husky": "^7.0.1",
     "enzyme-adapter-react-16": "^1.15.6",
     "eth-gas-reporter": "^0.2.22",
     "ethereum-waffle": "^3.3.0",
@@ -66,6 +66,7 @@
     "hardhat-gas-reporter": "^1.0.4",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.1",
     "import-sort-style-module-and-prefix": "^0.1.3",
     "is-windows": "^1.0.2",
     "jest": "^27.0.5",
@@ -79,8 +80,9 @@
     "react-refresh": "^0.10.0",
     "resolve-url-loader": "^4.0.0",
     "solhint": "^3.3.6",
-    "standard": "^16.0.3",
     "solidity-coverage": "^0.7.16",
+    "standard": "^16.0.3",
+    "style-loader": "^3.2.1",
     "styled-jsx": "^3.4.4",
     "svg-url-loader": "^7.1.1",
     "terser-webpack-plugin": "^5.1.3",
@@ -108,6 +110,7 @@
     "@types/styled-components": "^5.1.11",
     "@web3-react/core": "^6.1.9",
     "connected-react-router": "^6.9.1",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
