--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jest": "^27.0.5",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
+    "jest-styled-components": "^7.0.5",
     "jest-watch-typeahead": "0.6.1",
     "multihashing-async": "^2.1.2",
     "nyc": "^15.1.0",
