feat: add theme default & theme settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,9 @@
       "@assets/*": [
         "src/assets/*"
       ],
+      "@styles/*": [
+        "src/styles/*"
+      ],
       "@components/*": [
         "src/components/*"
       ]
