--- a/jest.config.json
+++ b/jest.config.json
@@ -22,9 +22,11 @@
   ],
   "moduleNameMapper": {
     "^@src(.*)$": "<rootDir>/src$1",
-    "^@state(.*)$": "<rootDir>/src/redux$1",
     "^@public(.*)$": "<rootDir>/public/$1",
+    "^@state(.*)$": "<rootDir>/src/redux$1",
     "^@pages(.*)$": "<rootDir>/src/pages/$1",
+    "^@styles(.*)$": "<rootDir>/src/styles/$1",
+    "^@assets(.*)$": "<rootDir>/src/assets$1",
     "^@layouts(.*)$": "<rootDir>/src/pages/__layouts__/$1",
     "^@components(.*)$": "<rootDir>/src/components$1"
   },
@@ -32,7 +34,8 @@
   "preset": "ts-jest",
   "testEnvironment": "jsdom",
   "transform": {
-    "^.+\\.jsx?$": "babel-jest"
+    "^.+\\.jsx?$": "babel-jest",
+    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/.jest/fileTransformer.js"
   },
   "transformIgnorePatterns": [
     "node_modules/(?!variables/.*)"
