--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.11",
     "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "connected-react-router": "^6.9.1",
     "i18next": "^20.3.5",
     "i18next-browser-languagedetector": "^6.1.2",
