--- a/jest.config.json
+++ b/jest.config.json
@@ -1,12 +1,13 @@
 {
   "roots": [
-    "<rootDir>/src"
+    "<rootDir>"
   ],
   "setupFiles": [
     "react-app-polyfill/jsdom"
   ],
   "setupFilesAfterEnv": [
-    "<rootDir>/.jest/setupEnzyme.js"
+    "<rootDir>/.jest/setupEnzyme.js",
+    "<rootDir>/.jest/setupJest.js"
   ],
   "testMatch": [
     "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
@@ -14,30 +15,56 @@
   ],
   "testRunner": "<rootDir>/node_modules/jest-circus/runner.js",
   "modulePaths": [
-    "<rootDir>/src"
+    "<rootDir>"
   ],
   "watchPlugins": [
     "jest-watch-typeahead/filename",
     "jest-watch-typeahead/testname"
   ],
+  "moduleFileExtensions": [
+    "ts",
+    "tsx",
+    "js",
+    "jsx",
+    "json",
+    "node"
+  ],
   "moduleNameMapper": {
     "^@src(.*)$": "<rootDir>/src$1",
-    "^@public(.*)$": "<rootDir>/public/$1",
-    "^@state(.*)$": "<rootDir>/src/redux$1",
-    "^@pages(.*)$": "<rootDir>/src/pages/$1",
-    "^@styles(.*)$": "<rootDir>/src/styles/$1",
+    "^@hooks(.*)$": "<rootDir>/src/hooks$1",
     "^@assets(.*)$": "<rootDir>/src/assets$1",
-    "^@layouts(.*)$": "<rootDir>/src/pages/__layouts__/$1",
-    "^@components(.*)$": "<rootDir>/src/components$1"
+    "^@styles(.*)$": "<rootDir>/src/styles$1",
+    "^@services(.*)$": "<rootDir>/src/services$1",
+    "^@navigation(.*)$": "<rootDir>/src/navigation$1",
+    "^@layouts(.*)$": "<rootDir>/src/pages/__layouts__$1",
+    "^@components(.*)$": "<rootDir>/src/components$1",
+    "^@public(.*)$": "<rootDir>/public/$1",
+    "^@helpers(.*)$": "<rootDir>/src/helpers$1",
+    "^@util(.*)$": "<rootDir>/src/util$1",
+    "^@pages(.*)$": "<rootDir>/src/pages$1",
+    "^@state(.*)$": "<rootDir>/src/redux$1",
+    "^@i18n(.*)$": "<rootDir>/src/i18n$1"
   },
+  "verbose": true,
   "resetMocks": true,
   "preset": "ts-jest",
   "testEnvironment": "jsdom",
   "transform": {
     "^.+\\.jsx?$": "babel-jest",
-    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/.jest/fileTransformer.js"
+    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/.jest/fileTransformer.js",
+    "\\.(gql|graphql)$": "jest-transform-graphql"
   },
   "transformIgnorePatterns": [
     "node_modules/(?!variables/.*)"
+  ],
+  "collectCoverage": true,
+  "coverageReporters": ["json", "html"],
+  "collectCoverageFrom": [
+    "**/*.{ts,tsx}",
+    "!**/node_modules/**"
+  ],
+  "moduleDirectories": [
+    "node_modules",
+    "src"
   ]
 }
