--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "lint:js:fix": "standard --fix && ts-standard --fix",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
     "test": "make test",
-    "test:ui": "jest --watchAll=false",
+    "test:ui": "jest --verbose --runInBand --detectOpenHandles --forceExit --coverage",
     "test:coverage": "nyc hardhat coverage",
     "test:goerli": "npx hardhat test --network goerli",
     "test:kovan": "npx hardhat test --network kovan",
     "test:rinkeby": "npx hardhat test --network rinkeby",
     "test:ropsten": "npx hardhat test --network ropsten",
+    "check:js": "dpdm  \"./src/**\" --exit-code circular:1 --tree=false --warning=false && jscpd \"src\" -r html --output ./jscpd/",
     "watch:ui": "webpack  --watch ",
     "build:ui": "cross-env NODE_ENV=production webpack",
     "start:ui": "cross-env WEBPACK_IS_DEV_SERVER=true NODE_ENV=development webpack serve --config webpack.config.babel.js",
-    "hook": "npm run lint:js:fix & npm run test:ui && hh compile && npm run test "
+    "hook": "npm run lint:js:fix & npm run check:ui & npm run test:ui & hh compile & npm run test"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -38,11 +39,18 @@
     "@openzeppelin/hardhat-upgrades": "^1.8.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@svgr/webpack": "^5.5.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/big.js": "^6.1.2",
     "@types/enzyme": "^3.10.8",
     "@types/history": "^4.7.8",
     "@types/jest": "^26.0.23",
+    "@types/node": "^16.7.10",
     "@types/react": "^16.14.8",
     "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-jest": "^26.6.0",
     "babel-loader": "^8.2.2",
     "bs58": "^4.0.1",
@@ -54,6 +62,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
     "dotenv": "^10.0.0",
+    "dpdm": "^3.7.1",
     "envfile": "^6.14.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -73,7 +82,10 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-styled-components": "^7.0.5",
+    "jest-transform-graphql": "^2.1.0",
+    "jest-transform-stub": "^2.0.0",
     "jest-watch-typeahead": "0.6.1",
+    "jscpd": "^3.3.26",
     "multihashing-async": "^2.1.2",
     "nyc": "^15.1.0",
     "path": "^0.12.7",
@@ -101,33 +113,51 @@
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/test-helpers": "^0.5.11",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router": "^5.1.16",
     "@types/react-router-redux": "^5.0.18",
     "@types/redux-logger": "^3.0.8",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.11",
     "@web3-react/core": "^6.1.9",
+    "big.js": "^6.1.1",
+    "circular-dependency-plugin": "^5.2.2",
     "connected-react-router": "^6.9.1",
+    "dotenv": "^10.0.0",
+    "husky": "^6.0.0",
     "i18next": "^20.3.5",
     "i18next-browser-languagedetector": "^6.1.2",
+    "jest-environment-jsdom": "^27.0.6",
+    "jest-styled-components": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.4",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
+    "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "ts-standard": "^10.0.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run hook"
+  "importSort": {
+    ".ts, .tsx": {
+      "style": "module-and-prefix",
+      "parser": "typescript"
+    },
+    ".js, .jsx": {
+      "style": "module-and-prefix",
+      "parser": "babylon"
     }
   },
   "standard": {
@@ -135,6 +165,8 @@
       "webpack.config.babel.js",
       "package.json",
       ".gitignore",
+      "/coverage/**",
+      "/jscpd/**",
       "/webpack/**/*.js",
       "/test/**/*.js"
     ],
@@ -149,8 +181,15 @@
       "package.json",
       ".gitignore",
       "/src/i18n",
+      "/coverage/**",
+      "/jscpd/**",
       "/webpack/**/*.js",
       "/test/**/*.js"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run hook"
+    }
   }
 }
