--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Install
         run: npm ci
 
+      - name: Check
+        run: npm run check:ui
+
       - name: Build
         run: npm run build:ui
 
