--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "@types/redux-logger": "^3.0.8",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.11",
+    "@types/swiper": "^5.4.3",
     "@web3-react/core": "^6.1.9",
     "big.js": "^6.1.1",
     "circular-dependency-plugin": "^5.2.2",
