--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -16,7 +16,7 @@ jobs:
         run: npm ci
 
       - name: Check
-        run: npm run check:ui
+        run: npm run check:js
 
       - name: Build
         run: npm run build:ui
