--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.1",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
+    "graphql-tag": "^2.12.5",
     "hardhat": "^2.4.3",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-gas-reporter": "^1.0.4",
