fix: jest.config.json

--- a/jest.config.json
+++ b/jest.config.json
@@ -51,7 +51,7 @@
   "testEnvironment": "jsdom",
   "transform": {
     "^.+\\.jsx?$": "babel-jest",
-    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/.jest/fileTransformer.js",
+    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/.jest/fileTransformer.js"
   },
   "transformIgnorePatterns": [
     "node_modules/(?!variables/.*)"
