--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "watch:ui": "webpack  --watch ",
     "build:ui": "cross-env NODE_ENV=production webpack",
     "start:ui": "cross-env WEBPACK_IS_DEV_SERVER=true NODE_ENV=development webpack serve --config webpack.config.babel.js",
-    "hook": "npm run lint:js:fix & npm run check:ui & npm run test:ui & hh compile & npm run test"
+    "hook": "npm run lint:js:fix & npm run check:js & npm run test:ui & hh compile & npm run test"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -44,7 +44,8 @@
     "@types/big.js": "^6.1.2",
     "@types/enzyme": "^3.10.8",
     "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^26.0.24",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.10",
     "@types/react": "^16.14.8",
     "@types/react-router-dom": "^5.1.7",
