--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.2.2",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
