--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "ethers": "^5.3.1",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
     "hardhat": "^2.4.3",
+    "hardhat-abi-exporter": "^2.3.0",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-gas-reporter": "^1.0.4",
     "html-loader": "^2.1.2",
