test: kovan chainlink

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,6 @@ services:
     image: node:lts-alpine
     command: sh -c "npx hardhat node"
     volumes:
-      - ./.env:/hardhat/.env
       - ./hardhat.config.js:/hardhat/hardhat.config.js
       - ./package.json:/hardhat/package.json
       - ./package-lock.json:/hardhat/package-lock.json
@@ -13,10 +12,9 @@ services:
     working_dir: /hardhat
     ports:
       - '8545:8545'
-    environment:
-      HARDHAT_AUTOMINE: "${HARDHAT_AUTOMINE}"
+    env_file: .env
     healthcheck:
-      test: ["CMD", "npx", "hardhat", "check"]
+      test: [ "CMD", "npx", "hardhat", "check" ]
       interval: 1m
       timeout: 5s
       retries: 3
@@ -41,7 +39,7 @@ services:
       - ./webpack:/ui/webpack
     working_dir: /ui
     healthcheck:
-      test: ["CMD", "wget", "localhost:3000", "-O", "/dev/null"]
+      test: [ "CMD", "wget", "localhost:3000", "-O", "/dev/null" ]
       interval: 1m
       timeout: 5s
       retries: 3
@@ -58,8 +56,8 @@ services:
     volumes:
       - ./.ipfs:/data/ipfs
     healthcheck:
-      test: ["CMD", "wget", "-S", "-O", "/dev/null",
-             "http://localhost:8080/ipfs/QmQPeNsJPyVWPFDVHb77w8G42Fvo15z4bG2X8D2GhfbSXc"]
+      test: [ "CMD", "wget", "-S", "-O", "/dev/null",
+              "http://localhost:8080/ipfs/QmQPeNsJPyVWPFDVHb77w8G42Fvo15z4bG2X8D2GhfbSXc" ]
       interval: 1m
       timeout: 5s
       retries: 3
