--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "~7.12.1",
     "@babel/runtime-corejs3": "^7.14.7",
+    "@chainlink/token": "^1.1.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/contracts-upgradeable": "^4.1.0",
     "@openzeppelin/hardhat-upgrades": "^1.8.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
@@ -53,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "@chainlink/contracts": "^0.2.2",
     "babel-jest": "^26.6.0",
     "babel-loader": "^8.2.2",
     "bs58": "^4.0.1",
@@ -113,7 +116,6 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@chainlink/contracts": "^0.2.2",
     "@emotion/cache": "^11.4.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -122,7 +124,6 @@
     "@mui/material": "^5.0.2",
     "@mui/styled-engine-sc": "^5.0.0",
     "@mui/system": "^5.0.3",
-    "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/test-helpers": "^0.5.11",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react-dom": "^16.9.8",
