--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        network: [rinkeby]
+        network: [kovan]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -47,11 +47,3 @@ jobs:
           ROPSTEN_ALCHEMY_API_KEY: ${{ secrets.ROPSTEN_ALCHEMY_API_KEY }}
           OWNER_KEY: ${{ secrets.OWNER_KEY }}
           SECONDARY_KEY: ${{ secrets.SECONDARY_KEY }}
-          GOERLI_CONTRACT_NFT: ${{ secrets.GOERLI_CONTRACT_NFT }}
-          GOERLI_CONTRACT_FT: ${{ secrets.GOERLI_CONTRACT_FT }}
-          KOVAN_CONTRACT_NFT: ${{ secrets.KOVAN_CONTRACT_NFT }}
-          KOVAN_CONTRACT_FT: ${{ secrets.KOVAN_CONTRACT_FT }}
-          RINKEBY_CONTRACT_NFT: ${{ secrets.RINKEBY_CONTRACT_NFT }}
-          RINKEBY_CONTRACT_FT: ${{ secrets.RINKEBY_CONTRACT_FT }}
-          ROPSTEN_CONTRACT_NFT: ${{ secrets.ROPSTEN_CONTRACT_NFT }}
-          ROPSTEN_CONTRACT_FT: ${{ secrets.ROPSTEN_CONTRACT_FT }}
