chore: fix Makefile

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,9 @@ jobs:
           LOCALHOST_CONTRACT_NFT: ${{ secrets.LOCALHOST_CONTRACT_NFT }}
           LOCALHOST_CONTRACT_FT: ${{ secrets.LOCALHOST_CONTRACT_FT }}
           HARDHAT_AUTOMINE: "true"
+      - name: docker-compose logs on failure
+        if: ${{ failure() }}
+        run: docker-compose logs
 
   testnet:
     runs-on: ubuntu-latest
