feat: contract interaction

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/big.js": "^6.1.2",
+    "@types/bs58": "^4.0.1",
     "@types/enzyme": "^3.10.8",
     "@types/history": "^4.7.8",
     "@types/jest": "^26.0.24",
@@ -153,6 +154,7 @@
     "@usedapp/core": "^0.5.4",
     "acorn-import-assertions": "^1.7.6",
     "big.js": "^6.1.1",
+    "cid-tool": "^3.0.0",
     "circular-dependency-plugin": "^5.2.2",
     "connected-react-router": "^6.9.1",
     "crypto": "^1.0.1",
