--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,6 +56,9 @@
       "@w3/*": [
         "src/w3/*"
       ],
+      "@abi/*": [
+        "abi/*"
+      ],
       "@i18n/*": [
         "src/i18n/*"
       ],
