--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - run: npm install yarn -g
       - run: yarn install && npm ci
       - run: npm run test:${{ matrix.network }}
         env:
