--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -12,9 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm install yarn -g
       - name: Install
-        run: yarn install
+        run: npm ci
       - name: Check
         run: npm run check:js
       - name: Build
