--- a/jest.config.json
+++ b/jest.config.json
@@ -32,7 +32,7 @@
   "moduleNameMapper": {
     "^@src(.*)$": "<rootDir>/src$1",
     "^@w3(.*)$": "<rootDir>/src/w3$1",
-    "^@abi(.*)$": "<rootDir>/artifacts/contracts$1",
+    "^@abi(.*)$": "<rootDir>/abi/",
     "^@hooks(.*)$": "<rootDir>/src/hooks$1",
     "^@assets(.*)$": "<rootDir>/src/assets$1",
     "^@styles(.*)$": "<rootDir>/src/styles$1",
