--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "ethers": "^5.4.7",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
     "hardhat": "^2.8.3",
+    "hardhat-abi-exporter": "^2.8.0",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.9.4",
     "hardhat-gas-reporter": "^1.0.4",
