--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,25 @@ false
 .env
 .ipfs
 jscpd
+
+dist
+
+dist/01d0f7e85dacda84dfcf.png
+dist/4a698097f59b1eee8ce9.png
+dist/041a3c479ede0b7e3eeb.json
+dist/0433fa82ea6261dbb79b.ico
+dist/favicon.ico
+dist/icon192.png
+dist/icon512.png
+dist/index.html
+dist/main.0b3a4908e24829ec7e17.js
+dist/runtime.9893b330515cfb2331f8.js
+dist/sw.js
+dist/tsconfig.tsbuildinfo
+dist/vendor.ea48538a131a8a7e2864.js
+dist/vendor.ea48538a131a8a7e2864.js.LICENSE.txt
+dist/assets/icons/icon.icns
+dist/assets/icons/icon.ico
+dist/assets/icons/icon.png
+dist/assets/img/screenshot_1.png
+dist/assets/img/watchit_logo_white.svg
