refactor: NFT_MINTER_ROLE as internal constant

--- a/package.json
+++ b/package.json
@@ -56,8 +56,16 @@
     "@types/jest": "^26.0.24",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.10",
-    "@types/react": "^16.14.8",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-router-redux": "^5.0.18",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-saga": "^0.10.5",
+    "@types/styled-components": "^5.1.11",
+    "@types/swiper": "^5.4.3",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
@@ -67,6 +75,7 @@
     "chai": "^4.3.4",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "compression-webpack-plugin": "^8.0.0",
+    "connected-react-router-immutable": "^2.0.0-alpha.6",
     "copy-webpack-plugin": "^9.0.0",
     "core-js": "~3.7.0",
     "cross-env": "^7.0.3",
@@ -135,6 +144,10 @@
   "browser": {
     "crypto": false
   },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
   "dependencies": {
     "@dicebear/adventurer-neutral": "^4.10.0",
     "@dicebear/avatars": "^4.10.0",
@@ -154,14 +167,6 @@
     "@openzeppelin/test-helpers": "^0.5.11",
     "@reduxjs/toolkit": "^1.6.1",
     "@tabler/icons": "^1.44.0",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router": "^5.1.16",
-    "@types/react-router-redux": "^5.0.18",
-    "@types/redux-logger": "^3.0.8",
-    "@types/redux-saga": "^0.10.5",
-    "@types/styled-components": "^5.1.11",
-    "@types/swiper": "^5.4.3",
     "@usedapp/core": "^0.11.0",
     "@web3-react/injected-connector": "^6.0.7",
     "acorn-import-assertions": "^1.7.6",
